# motebit

./: .dockerignore  .eslintrc.js  .gitignore  .prettierignore  .watchmanconfig  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPETITIVE_LANDSCAPE.md  CONSTITUTION.md  CONTRIBUTING.md  DOCTRINE.md  DROPLET.md  GOVERNANCE.md  LICENSE  LICENSING.md  LIQUESCENTIA.md  MOTEBIT.md  NEXT_SESSION.md  OPENCLAW_ZEROCLAW_GITHUB_RESEARCH.md  README.md  SECURITY.md  SESSION_NEXT.md  SUPPORT.md  THE_ACTOR_PRINCIPLE.md  THE_AGENTIC_WAVE.md  THE_CONFERENCE.md  THE_EMERGENT_INTERIOR.md  THE_METABOLIC_PRINCIPLE.md  THE_MUSIC_OF_THE_MEDIUM.md  THE_SELF_SIGNING_BODY.md  THE_SOVEREIGN_INTERIOR.md  THE_THESIS_POST.md  TRADEMARK.md  X_STRATEGY.md  coverage-graduation.json  docker-compose.federation.yml  knip.json  knip.jsonc  (+8 more)
.changeset/: 4e64ee5f.md  4f530f24.md  5db6b925.md  6466d9a9.md  6f519569.md  94144a23.md  README.md  account-balance-wire-format.md  account-withdraw-wire-format.md  accrual-basis-inc1.md  accrual-basis-inc2.md  activity-cross-surface-port.md  activity-panel-sovereignty-visible.md  adjudicator-vote-dispute-id-binding.md  admin-route-auth-gate.md  agent-command-envelope.md  agent-resolution-result-schema.md  agent-revocation-delisting-ignored.md  agent-revocation-delisting.md  agent-service-listing-schema.md  agent-settlement-anchor-spec.md  agent-settlement-anchoring.md  agent-settlement-merkle-anchoring.md  agent-settlement-v2-producer-ignored.md  agent-task-schema.md  agent-trust-petname.md  ai-core-dishonest-closing-intercept.md  ai-core-narration-producer.md  ai-core-narration-validation.md  ai-core-tool-status-fields.md  answer-engine.md  anthropic-extended-thinking-ignored.md  (+488 more)
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/sidecar/: package.json  skills.js
apps/desktop/src-tauri/src/: computer_use.rs  main.rs  runtime_host.rs  secure_enclave.rs  skills.rs  tool_guard.rs  tpm.rs
(+1774 files in other folders)
