[package]
name = "motebit-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = "3"
base64 = "0.22"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
xcap = "0.9"
enigo = "0.6"
image = "0.25"
sha2 = "0.10"

[build-dependencies]
tauri-build = { version = "2", features = [] }
